--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -42,10 +42,7 @@ li {
  }
 }
 //
-h1, h2, h3, h4, h5, h6, p {
-  font-family: Mulish;
-}
-//
+
 $maxWidth: 1350;
 @mixin adaptiv-font($pcSize) {
  $mobSize: 0.6 * $pcSize;
@@ -56,6 +53,21 @@ $maxWidth: 1350;
 //
 $blue: #4276d7;
 $black: #373F41;
+$grey: #737B7D;
+//
+h1, h2, h3, h4, h5, h6,    {
+  font-family: Mulish;
+  line-height: 53px;
+  letter-spacing: 0.2px;
+}
+h1 {
+  @include adaptiv-font(44);
+}
+p {
+  @include adaptiv-font(16);
+  line-height: 22px;
+  letter-spacing: 0.3px;
+}
 //
 .container {
   height: 100%;
@@ -81,8 +93,12 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
+  width: 100%;
   height: 5vw;
+  z-index: 100;
+  position: relative;
+
   .logo {
     position: absolute;
     left: 0;
@@ -108,11 +124,50 @@ nav {
     color: #fff !important;
   }
 }
+
 main {
   width: 100vw;
   height: 90vh;
-  background: url('/img/main/pexels-nothing-ahead-3729557.jpg') no-repeat;
+  // background:  url('/img/main/pexels-lumn-167682.png') no-repeat;
   background-size: cover;
   position: fixed;
-
+  position: relative;
+  z-index: 1;
+  &::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.2);
+    width: 100%;
+    z-index: 2;
+  }
+  .container {
+    display: flex;
+    align-items: center;
+    .main__header {
+      max-width: clamp(400px, 40%, 45%);
+      h1 {
+        color: $black;
+        margin: 0 0 4% 0;
+      }
+      p {
+        color: $grey;
+      }
+    }
+  }
 }
+// .difficulty {
+//   margin: 8% 0;
+//   text-align: center;
+//   .container {
+//     display: flex;
+//     .difficulty__item {
+//       flex-basis: 33.333%;
+//       // max-width: 30%;
+//     }
+//
+//   }
+// }
