--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -54,14 +54,18 @@ $maxWidth: 1350;
 $blue: #4276d7;
 $black: #373F41;
 $grey: #737B7D;
+// $white:  #5d6669;
 //
-h1, h2, h3, h4, h5, h6,    {
+h1, h2, h3, h4, h5, h6  {
   font-family: Mulish;
   line-height: 53px;
   letter-spacing: 0.2px;
 }
 h1 {
   @include adaptiv-font(44);
+}
+h3 {
+  @include adaptiv-font(19);
 }
 p {
   @include adaptiv-font(16);
@@ -95,7 +99,7 @@ nav {
   justify-content: center;
   position: absolute;
   width: 100%;
-  height: 5vw;
+  height: 4vw;
   z-index: 100;
   position: relative;
 
@@ -126,11 +130,11 @@ nav {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
   height: 90vh;
-  // background:  url('/img/main/pexels-lumn-167682.png') no-repeat;
+  background-position: fixed;
+  background:  url('/img/main/math.png') no-repeat fixed;
   background-size: cover;
-  position: fixed;
   position: relative;
   z-index: 1;
   &::after{
@@ -140,7 +144,7 @@ main {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0,0,0,.2);
+    background: rgba(0,0,0,.6);
     width: 100%;
     z-index: 2;
   }
@@ -149,6 +153,7 @@ main {
     align-items: center;
     .main__header {
       max-width: clamp(400px, 40%, 45%);
+      z-index: 10;
       h1 {
         color: $black;
         margin: 0 0 4% 0;
@@ -159,15 +164,35 @@ main {
     }
   }
 }
-// .difficulty {
-//   margin: 8% 0;
-//   text-align: center;
-//   .container {
-//     display: flex;
-//     .difficulty__item {
-//       flex-basis: 33.333%;
-//       // max-width: 30%;
-//     }
-//
-//   }
-// }
+.difficulty {
+  margin: 8% 0;
+  text-align: center;
+  .container {
+    display: flex;
+    @media (max-width: 1200px) {
+      flex-direction: column;
+      .difficulty__item {
+        margin: 3% 0;
+      }
+    }
+    .difficulty__item {
+      flex-basis: 33.333%;
+      justify-content: space-between;
+      p {
+        @include adaptiv-font(12);
+        line-height: 1.6;
+        &:last-of-type{
+          margin: 0 0 2.5% 0;
+        }
+      }
+      img {
+        width: 40px;
+        height: 40px;
+        transition: 0.7s;
+        &:hover {
+          transform: translate(0, -17%);
+        }
+      }
+    }
+  }
+}
