--- a/css/style.css
+++ b/css/style.css
@@ -7105,9 +7105,24 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   font-family: Mulish;
+  line-height: 53px;
+  letter-spacing: 0.2px;
+}
+
+h1 {
+  font-size: calc(26.4px + 17.6 * ((100vw - 320px) / 1030));
+}
+
+h3 {
+  font-size: calc(11.4px + 7.6 * ((100vw - 320px) / 1030));
+}
+
+p {
+  font-size: calc(9.6px + 6.4 * ((100vw - 320px) / 1030));
+  line-height: 22px;
+  letter-spacing: 0.3px;
 }
 
 .container {
@@ -7143,8 +7158,11 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 4vw;
+  z-index: 100;
   position: relative;
-  height: 5vw;
 }
 
 nav .logo {
@@ -7179,11 +7197,103 @@ nav .nav__button {
 }
 
 main {
-  width: 100vw;
+  width: 100%;
   height: 90vh;
-  background: url("/img/main/pexels-nothing-ahead-3729557.jpg") no-repeat;
+  background-position: fixed;
+  background: url("/img/main/math.png") no-repeat fixed;
   background-size: cover;
-  position: fixed;
+  position: relative;
+  z-index: 1;
+}
+
+main::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  z-index: 2;
+}
+
+main .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .container .main__header {
+  max-width: clamp(400px, 40%, 45%);
+  z-index: 10;
+}
+
+main .container .main__header h1 {
+  color: #d6dfdf;
+  margin: 0 0 4% 0;
+}
+
+main .container .main__header p {
+  color: #869094;
+}
+
+.difficulty {
+  margin: 8% 0;
+  text-align: center;
+}
+
+.difficulty .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.difficulty .container .difficulty__item {
+  -ms-flex-preferred-size: 33.333%;
+      flex-basis: 33.333%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.difficulty .container .difficulty__item p {
+  font-size: calc(7.2px + 4.8 * ((100vw - 320px) / 1030));
+  line-height: 1.6;
+}
+
+.difficulty .container .difficulty__item p:last-of-type {
+  margin: 0 0 2.5% 0;
+}
+
+.difficulty .container .difficulty__item img {
+  width: 40px;
+  height: 40px;
+  -webkit-transition: 0.7s;
+  -o-transition: 0.7s;
+  transition: 0.7s;
+}
+
+.difficulty .container .difficulty__item img:hover {
+  -webkit-transform: translate(0, -17%);
+      -ms-transform: translate(0, -17%);
+          transform: translate(0, -17%);
+}
+
+@media (max-width: 1200px) {
+  .difficulty .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .difficulty .container .difficulty__item {
+    margin: 3% 0;
+  }
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -7209,4 +7319,4 @@ main {
   }
 }
 
-.webp main{ background: url(/img/main/pexels-nothing-ahead-3729557.webp) no-repeat; }
+.webp main{ background: url(/img/main/math.webp) no-repeat fixed; }
