--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -134,7 +134,7 @@ main {
   width: 100%;
   height: 90vh;
   background-position: fixed;
-  background:  url(/img/main/math.png) no-repeat;
+  background:  url(../img/main/math.png) no-repeat;
   background-size: cover;
   position: relative;
   z-index: 1;
