--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -133,8 +133,7 @@ nav {
 main {
   width: 100%;
   height: 90vh;
-  background-position: fixed;
-  background:  url(../img/main/math.png) no-repeat;
+  background:  url(../img/main/math.png) no-repeat fixed;
   background-size: cover;
   position: relative;
   z-index: 1;
