--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -45,7 +45,7 @@ li {
 
 $maxWidth: 1350;
 @mixin adaptiv-font($pcSize) {
- $mobSize: 0.6 * $pcSize;
+ $mobSize: 0.8 * $pcSize;
  $addSize: $pcSize - $mobSize;
  $maxWidth: $maxWidth - 320;
  font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth}));
@@ -95,18 +95,21 @@ p {
   color: #fff;
 }
 nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  width: 100%;
-  height: 4vw;
-  z-index: 100;
+  height: 40px;
   position: relative;
-
+  .container {
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
   .logo {
-    position: absolute;
-    left: 0;
+    flex: 1 1 auto;
+    @include adaptiv-font(26);
+  }
+  .nav__content {
+    height: 40px;
+    width: 100%;
   }
   .nav__item {
     margin: 0 2%;
@@ -121,12 +124,6 @@ nav {
   }
   .nav__item__hover {
     color: $blue;
-  }
-  .nav__button {
-    position: absolute;
-    right: 0;
-    height: max(60%, 35px);
-    color: #fff !important;
   }
 }
 
@@ -198,3 +195,6 @@ main {
     }
   }
 }
+//
+@import 'burger';
+//
