--- a/#src/scss/burger.scss
+++ b/#src/scss/burger.scss
@@ -1,11 +1,12 @@
 @media (max-width: 767px) {
   nav {
     .nav--mobile {
-      height: 100vh;
+      height: 0;
       width: 100%;
       display: flex;
       align-items: center;
-      position: relative;
+      font-size: 0;
+      // position: relative;
       .menu-btn {
         right:0;
         top: 2px;
@@ -54,7 +55,7 @@
         height: 100%;
         background: $white;
         z-index: 100;
-        transform: translateY(-1000px);
+        transform: translateY(-100%);
         .container {
           width: 100%;
           height: 100%;
@@ -62,20 +63,21 @@
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          a {
-            margin: 3% 0;
-            @include adaptiv-font(23);
-          }
-          .logo {
-            flex: 0;
-            @include adaptiv-font(35);
-          }
+
         }
       }
       .nav__content_active {
-        transform: translateY(0px);
+        transform: translateY(50%);
         height: 100vh;
         width: 100%;
+        a {
+          margin: 3% 0;
+          @include adaptiv-font(23);
+        }
+        .logo {
+          flex: 0;
+          @include adaptiv-font(35);
+        }
       }
     }
   }
