--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -65,6 +65,10 @@ h1, h2, h3, h4, h5, h6  {
 h1 {
   @include adaptiv-font(44);
 }
+h2 {
+  @include adaptiv-font(28);
+  
+}
 h3 {
   @include adaptiv-font(19);
 }
@@ -75,6 +79,7 @@ p {
 }
 //
 .container {
+  width: 100%;
   height: 100%;
   padding: 0 13%;
 }
@@ -116,7 +121,7 @@ nav {
     line-height: 18px;
     letter-spacing: 0.2px;
     color: $black;
-    @include adaptiv-font(16);
+    // @include adaptiv-font(16);
     transition: 0.5s;
     &:hover {
       color: $blue;
@@ -197,4 +202,5 @@ main {
 }
 //
 @import 'burger';
+@import 'difficulties';
 //
