--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -16,14 +16,83 @@
       justify-content: center;
       margin: 3% 0;
     }
-    button {
+    .task__animation {
       position: absolute;
       right: 5%;
       bottom: 5%;
-      padding: 1%;
-      border-radius: 5px;
-      background: $blue;
-      color: $white;
+      .checkbox {
+        position:  relative;
+        overflow: hidden;
+        .checkbox__input {
+          appearance: none;
+          position: absolute;
+        }
+        .checkbox__label {
+          position: relative;
+           padding: 15px 30px;
+           user-select:none;// отменяет выделение текста при двойном нажатии
+           color: $blue;
+           cursor: pointer;
+           transition: 0.3s;
+         }
+
+        .checkbox__line {
+          position: absolute;
+          display: block;
+        }
+        //top
+        .checkbox__line--top {
+          top: 0;
+          left: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(90deg, transparent, $blue)
+        }
+        .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top{
+          left: 100%;
+          transition: 1s;
+          transition-delay: 0.25s;
+        }
+        //right
+        .checkbox__line--right {
+          top: -100%;
+          right: 0%;
+          width: 2px;;
+          height: 100%;
+          background: linear-gradient(180deg, transparent, $blue)
+        }
+        .checkbox__input:checked + .checkbox__label ~ .checkbox__line--right{
+          top: 100%;
+          transition: 1s;
+          transition-delay: 0s;
+        }
+        //bottom
+        .checkbox__line--bottom {
+          bottom: 0;
+          right: -100%;
+          width: 100%;
+          height: 2px;
+          background: linear-gradient(270deg, transparent, $blue)
+        }
+        .checkbox__input:checked + .checkbox__label ~ .checkbox__line--bottom{
+          right: 100%;
+          transition: 1s;
+          transition-delay: 0.25s;
+        }
+        //left
+        .checkbox__line--left {
+          bottom: -100%;
+          left: 0%;
+          width: 2px;;
+          height: 100%;
+          background: linear-gradient(0deg, transparent, $blue)
+        }
+        .checkbox__input:checked + .checkbox__label ~ .checkbox__line--left{
+          bottom: 100%;
+          transition: 1s;
+          transition-delay: 0s;
+        }
+      }
     }
   }
 }
