--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -1,20 +1,20 @@
 .task {
-
-  margin: 5% 0 0 0;
-  min-height: 250px;
-  border-radius: 15px;
   background: #fafafa;
-  position:  relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  // flex-direction:  column;
-  .container {
+
+  min-height: 250px;
+  .checkbox__line {
+    position: absolute;
+    display: block;
+    background: $blue
+  }
+  .task__container  {
+    border-radius: 15px;
+    position:  relative;
+    padding: 7%;
+    text-align: center;
     height: 100%;
     h2 {
       text-align: center;
-      // letter-spacing: 10px;
     }
     .task__formula {
       display: flex;
@@ -23,29 +23,24 @@
     }
     .task__animation {
       position: absolute;
-      right: 5%;
+      right: 10%;
       bottom: 0%;
       .checkbox {
         position:  relative;
-        overflow: hidden;
+        // overflow: hidden;
         .checkbox__input {
           appearance: none;
           position: absolute;
         }
         .checkbox__label {
           position: relative;
-           padding: 15px 30px;
+           padding: 15px 30px ;
            user-select:none;// отменяет выделение текста при двойном нажатии
            color: $blue;
            cursor: pointer;
            transition: 0.3s;
-
          }
-        .checkbox__line {
-          position: absolute;
-          display: block;
-          background: $blue
-        }
+
         ////top-left
         .checkbox__line--top-left {
           top: 0;
@@ -55,7 +50,7 @@
         }
         .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top-left {
           width: 50%;
-          transition: 0.5s;
+          transition: 0.4s;
           transition-delay: 0.25s;
         }
         ////top-right
@@ -64,13 +59,13 @@
           left: 50%;
           width: 0%;
           height: 2px;
-          transform-origin: left;
+          transform-origin: left center;
           transform:  rotate(180deg);
 
         }
         .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top-right {
           width: 50%;
-          transition: 0.5s;
+          transition: 0.4s;
           transition-delay: 0.25s;
         }
         ////right
@@ -82,7 +77,7 @@
         }
         .checkbox__input:checked + .checkbox__label ~ .checkbox__line--right {
           height: 100%;
-          transition: 0.65s;
+          transition: 0.45s;
           transition-delay: 0.75s;
         }
         ////left
@@ -94,19 +89,52 @@
         }
         .checkbox__input:checked + .checkbox__label ~ .checkbox__line--left {
           height: 100%;
-          transition: 0.65s;
+          transition: 0.45s;
           transition-delay: 0.75s;
         }
         ////answer
-
+        }
       }
+  }
+  .answer {
+    padding: 5% 10%;
+    height: 0;
+    opacity: 0;
+    background: #fafafa;
+    // transition: 1s;
+    position: absolute;
+    top: -100%;
+    .answer__line--top-right{
+      top: 0;
+      right: 10%;
+      width: 0%;
+      height: 2px;
+      transform: rotate(180deg);
+      transform-origin: right;
+    }
+    .answer__line--top-left{
+      top: 0;
+      right: calc(9.8% + 127.37px);
+      // transform:  rotate(180deg);
+      width: 0%;
+      height: 2px;
     }
   }
-  // .answer {
-  //
-  //   width: 100%;
-  //   height: 100px;
-  //   background: red;
-  //
-  // }
+  .answer--open {
+    position:  relative;
+    height: auto;
+    opacity: 1;
+    transition:  opacity 0.5s;
+    transition-delay: 1.25s;
+    .answer__line--top-right{
+      width: 5%;
+      transition: 0.3s;
+      transition-delay: 1.15s;
+    }
+    .answer__line--top-left{
+      width: calc(95% - (9.8% + 127.37px));
+      transition: 0.4s;
+      transition-delay: 1.15s;
+    }
+  }
 }
