--- a/css/style.css
+++ b/css/style.css
@@ -7115,6 +7115,10 @@ h1 {
   font-size: calc(35.2px + 8.8 * ((100vw - 320px) / 1030));
 }
 
+h2 {
+  font-size: calc(22.4px + 5.6 * ((100vw - 320px) / 1030));
+}
+
 h3 {
   font-size: calc(15.2px + 3.8 * ((100vw - 320px) / 1030));
 }
@@ -7126,6 +7130,7 @@ p {
 }
 
 .container {
+  width: 100%;
   height: 100%;
   padding: 0 13%;
 }
@@ -7183,7 +7188,6 @@ nav .nav__item {
   line-height: 18px;
   letter-spacing: 0.2px;
   color: #373F41;
-  font-size: calc(12.8px + 3.2 * ((100vw - 320px) / 1030));
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -7283,6 +7287,205 @@ main .container .main__header p {
           transform: translate(0, -17%);
 }
 
+.task {
+  background: #fafafa;
+  min-height: 250px;
+}
+
+.task .checkbox__line {
+  position: absolute;
+  display: block;
+  background: #4276d7;
+}
+
+.task .task__container {
+  border-radius: 15px;
+  position: relative;
+  padding: 7%;
+  text-align: center;
+  height: 100%;
+}
+
+.task .task__container h2 {
+  text-align: center;
+}
+
+.task .task__container .task__formula {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 3% 0;
+}
+
+.task .task__container .task__animation {
+  position: absolute;
+  right: 10%;
+  bottom: 0%;
+}
+
+.task .task__container .task__animation .checkbox {
+  position: relative;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  position: absolute;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__label {
+  position: relative;
+  padding: 15px 30px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: #4276d7;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__line--top-left {
+  top: 0;
+  left: 50%;
+  width: 0%;
+  height: 2px;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top-left {
+  width: 50%;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transition-delay: 0.25s;
+       -o-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__line--top-right {
+  top: 0;
+  left: 50%;
+  width: 0%;
+  height: 2px;
+  -webkit-transform-origin: left center;
+      -ms-transform-origin: left center;
+          transform-origin: left center;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.task .task__container .task__animation .checkbox .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top-right {
+  width: 50%;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transition-delay: 0.25s;
+       -o-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__line--right {
+  top: 0;
+  right: 0;
+  width: 2px;
+  height: 0%;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__input:checked + .checkbox__label ~ .checkbox__line--right {
+  height: 100%;
+  -webkit-transition: 0.45s;
+  -o-transition: 0.45s;
+  transition: 0.45s;
+  -webkit-transition-delay: 0.75s;
+       -o-transition-delay: 0.75s;
+          transition-delay: 0.75s;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__line--left {
+  top: 0;
+  left: 0;
+  width: 2px;
+  height: 0%;
+}
+
+.task .task__container .task__animation .checkbox .checkbox__input:checked + .checkbox__label ~ .checkbox__line--left {
+  height: 100%;
+  -webkit-transition: 0.45s;
+  -o-transition: 0.45s;
+  transition: 0.45s;
+  -webkit-transition-delay: 0.75s;
+       -o-transition-delay: 0.75s;
+          transition-delay: 0.75s;
+}
+
+.task .answer {
+  padding: 5% 10%;
+  height: 0;
+  opacity: 0;
+  background: #fafafa;
+  position: absolute;
+  top: -100%;
+}
+
+.task .answer .answer__line--top-right {
+  top: 0;
+  right: 10%;
+  width: 0%;
+  height: 2px;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transform-origin: right;
+      -ms-transform-origin: right;
+          transform-origin: right;
+}
+
+.task .answer .answer__line--top-left {
+  top: 0;
+  right: calc(9.8% + 127.37px);
+  width: 0%;
+  height: 2px;
+}
+
+.task .answer--open {
+  position: relative;
+  height: auto;
+  opacity: 1;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  -webkit-transition-delay: 1.25s;
+       -o-transition-delay: 1.25s;
+          transition-delay: 1.25s;
+}
+
+.task .answer--open .answer__line--top-right {
+  width: 5%;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transition-delay: 1.15s;
+       -o-transition-delay: 1.15s;
+          transition-delay: 1.15s;
+}
+
+.task .answer--open .answer__line--top-left {
+  width: calc(95% - (9.8% + 127.37px));
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transition-delay: 1.15s;
+       -o-transition-delay: 1.15s;
+          transition-delay: 1.15s;
+}
+
 @media (max-width: 1200px) {
   .difficulty .container {
     -webkit-box-orient: vertical;
@@ -7298,7 +7501,7 @@ main .container .main__header p {
 
 @media (max-width: 767px) {
   nav .nav--mobile {
-    height: 100vh;
+    height: 0;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -7306,7 +7509,7 @@ main .container .main__header p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    position: relative;
+    font-size: 0;
   }
 
   nav .nav--mobile .menu-btn {
@@ -7378,9 +7581,9 @@ main .container .main__header p {
     height: 100%;
     background: #d6dfdf;
     z-index: 100;
-    -webkit-transform: translateY(-1000px);
-        -ms-transform: translateY(-1000px);
-            transform: translateY(-1000px);
+    -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+            transform: translateY(-100%);
   }
 
   nav .nav--mobile .nav__content .container {
@@ -7401,24 +7604,24 @@ main .container .main__header p {
             flex-direction: column;
   }
 
-  nav .nav--mobile .nav__content .container a {
+  nav .nav--mobile .nav__content_active {
+    -webkit-transform: translateY(50%);
+        -ms-transform: translateY(50%);
+            transform: translateY(50%);
+    height: 100vh;
+    width: 100%;
+  }
+
+  nav .nav--mobile .nav__content_active a {
     margin: 3% 0;
     font-size: calc(18.4px + 4.6 * ((100vw - 320px) / 1030));
   }
 
-  nav .nav--mobile .nav__content .container .logo {
+  nav .nav--mobile .nav__content_active .logo {
     -webkit-box-flex: 0;
         -ms-flex: 0;
             flex: 0;
     font-size: calc(28px + 7 * ((100vw - 320px) / 1030));
-  }
-
-  nav .nav--mobile .nav__content_active {
-    -webkit-transform: translateY(0px);
-        -ms-transform: translateY(0px);
-            transform: translateY(0px);
-    height: 100vh;
-    width: 100%;
   }
 
   .lock {
