--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -67,7 +67,7 @@ h1 {
 }
 h2 {
   @include adaptiv-font(28);
-  
+
 }
 h3 {
   @include adaptiv-font(19);
@@ -77,7 +77,54 @@ p {
   line-height: 22px;
   letter-spacing: 0.3px;
 }
-//
+// preloader
+.preloader--overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: white;
+  z-index: 9998;
+  transition: 1s all;
+  opacity: 1;
+  visibility: visible;
+  &.done {
+      opacity: 0;
+      visibility:  hidden;
+  }
+}
+.preloader {
+  z-index: 9999;
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 0.9s cubic-bezier(0,.67,.88,.33) infinite ;
+
+
+}
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+.loaded_hiding .preloader {
+  transition: 0.3s opacity;
+  opacity: 0;
+}
+
+.loaded .preloader {
+  display: none;
+}
+////
 .container {
   width: 100%;
   height: 100%;
@@ -134,7 +181,7 @@ nav {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background:  url(../img/main/math.png) no-repeat fixed;
   background-size: cover;
   position: relative;
@@ -163,7 +210,6 @@ main {
       p {
         // color: $grey;
         color: $whiteGrey;
-
       }
     }
   }
