--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -182,7 +182,7 @@ nav {
 main {
   width: 100%;
   height: 100vh;
-  background:  url(../img/main/math.png) no-repeat fixed;
+  background: linear-gradient(to bottom, transparent 70%, $black),  url(../img/main/math.png) no-repeat fixed;
   background-size: cover;
   position: relative;
   z-index: 1;
@@ -238,8 +238,44 @@ main {
       img {
         width: 40px;
         height: 40px;
-        transition: 0.7s;
-        &:hover {
+        transition: 0.4s;
+      }
+      &:hover {
+        img {
+          transform: translate(0, -17%);
+        }
+      }
+    }
+  }
+}
+.opportunities{
+  padding: 5% 0;
+  width: 100%;
+  height: auto;
+  .container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    @media (max-width: 1200px) {
+      flex-wrap: wrap;
+    }
+    .opportunities__item {
+      display: block;
+      margin: 0 5%;
+      flex-basis: 25%;
+      @media (max-width: 1200px) {
+        margin:  3% 10%;
+        max-width: 30%;
+        flex-basis: 50%;
+      }
+      img {
+        transition: 0.4s;
+        width: 40px;
+        height: 40px;
+      }
+      &:hover {
+        img {
           transform: translate(0, -17%);
         }
       }
