--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -105,8 +105,6 @@ p {
   width: 100px;
   height: 100px;
   animation: spin 0.9s cubic-bezier(0,.67,.88,.33) infinite ;
-
-
 }
 @keyframes spin {
     0% {
@@ -208,7 +206,6 @@ main {
         margin: 0 0 4% 0;
       }
       p {
-        // color: $grey;
         color: $whiteGrey;
       }
     }
@@ -243,6 +240,53 @@ main {
       &:hover {
         img {
           transform: translate(0, -17%);
+        }
+      }
+    }
+  }
+}
+.pueChart {
+  width: 100%;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    @media (max-width: 800px) {
+      flex-wrap: wrap;
+      justify-content: center;
+      .pueChart__pueChar {
+        height: 400px !important;
+      }
+    }
+    .pueChart__title {
+      max-width: 30%;
+      @media (max-width: 800px) {
+        max-width: 100%;
+
+      }
+      h2 {
+        display: block;
+        line-height: 2.5rem;
+        margin: 0 0 0.5rem;
+        @include adaptiv-font(32);
+      }
+      small {
+        display: block;
+
+        color: $grey;
+        @include adaptiv-font(16);
+      }
+      button {
+        float: right;
+        margin:  8% 0 0 0;
+        padding:  4% 9%;
+        border-radius: 5px;
+        background: $blue;
+        @include adaptiv-font(16);
+        a {
+          color: $white ;
+        }
+        a:visited {
+          color: $white;
         }
       }
     }
