--- a/#src/scss/theoreticalMaterial.scss
+++ b/#src/scss/theoreticalMaterial.scss
@@ -1,9 +1,11 @@
-.content__item {
+article {
   picture {
     display: flex;
     justify-content: center;
   }
   h1, h2, h3, h4, h5, h6 {
+    display: block;
+    width: 100%;
     text-align: center;
   }
 }
