--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -56,6 +56,7 @@ $black: #373F41;
 $grey: #737B7D;
 $white:  #d6dfdf;
 $whiteGrey: #869094;
+$disabledBtn : #cee4ee;
 //
 h1, h2, h3, h4, h5, h6  {
   font-family: Mulish;
@@ -261,7 +262,6 @@ main {
       max-width: 30%;
       @media (max-width: 800px) {
         max-width: 100%;
-
       }
       h2 {
         display: block;
@@ -271,23 +271,53 @@ main {
       }
       small {
         display: block;
-
         color: $grey;
         @include adaptiv-font(16);
       }
+      //button
       button {
+        margin: 6% 0 0 0;
         float: right;
-        margin:  8% 0 0 0;
-        padding:  4% 9%;
+        width: 130px;
+        height: 40px;
+        background: $disabledBtn;
         border-radius: 5px;
-        background: $blue;
+        // padding: 10px 25px;
+        position: relative;
+        display: inline-block;
         @include adaptiv-font(16);
+        transition:  0.3s;
+        z-index: 1;
+
         a {
-          color: $white ;
+          display: block;
+          width: 100%;
+          height: 100%;
+          color: #fff;
+          //
+          display: flex;
+          justify-content: center;
+          align-items:  center;
         }
-        a:visited {
-          color: $white;
-        }
+      }
+      button:after {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 100%;
+        top: 0;
+        right: 0;
+        background-color: $blue;
+        border-radius: 5px;
+        box-shadow: 0px 5px 29px 2px rgba(34, 60, 80, 0.26);
+        transition:  0.3s;
+        z-index: -1;
+
+      }
+
+      button:hover:after {
+        left: 0;
+        width: 100%;
       }
     }
   }
