--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -1,3 +1,8 @@
+.formula {
+  max-width: 100vw;
+
+}
+
 .task {
   background: #fafafa;
 
@@ -24,10 +29,11 @@
       color: $grey;
       @include adaptiv-font(13);
     }
-    .task__formula {
-      display: flex;
-      justify-content: center;
-    }
+    // .task__formula {
+    //   // display: flex;
+    //   // justify-content: center;
+    //
+    // }
     .task__animation {
       position: absolute;
       right: 10%;
@@ -115,6 +121,11 @@
       justify-content: center;
       max-width: 100%;
     }
+    // @media  (max-width: 380px) {
+    //   .answer__container {
+    //     font-size: 13px !important
+    //   }
+    // }
     .answer__line--top-right{
       top: 0;
       right: 10%;
