--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -28,12 +28,11 @@
       bottom: 0;
       color: $grey;
       @include adaptiv-font(13);
+      transition: 0.5s;
+      &:hover {
+        color: $blue
+      }
     }
-    // .task__formula {
-    //   // display: flex;
-    //   // justify-content: center;
-    //
-    // }
     .task__animation {
       position: absolute;
       right: 10%;
