--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -151,16 +151,21 @@ main {
 .phone {
 
   height: 100vh;
+  h2 {
+    text-align: center;
+  }
  .container {
-   padding: 0;
+   padding: 5% 0 0 0;
    display: flex;
    justify-content: center;
    align-items:  center;
     .phone__container {
+      width: 280px;
+      height: 570px;
       position: relative;
-      display: flex;
-      justify-content: center;
-      align-items:  center;
+      // display: flex;
+      // justify-content: center;
+      // align-items:  center;
       .phone__item1 {
         z-index: 3
       }
@@ -174,11 +179,11 @@ main {
         transition: 380ms;
 
         position: absolute;
-        // top: 50%;
-        // top: 0;
-        // left: 0;
-        max-width: 500px;
-        max-height: 700px;
+        height: auto;
+        // width: 16vw;
+        // min-width: 280px;
+        width: 280px;
+        height: 570px;
       }
       &:hover{
         .phone__item1 {
@@ -190,11 +195,38 @@ main {
         .phone__item3 {
           transform: translate(0, 0%) rotate(28deg) skew(-26deg);
         }
+        @media(max-width: 780px){
+          .phone__item1 {
+            transform: translate(0, -44%) rotate(18deg) skew(-16deg);
+          }
+          .phone__item2 {
+            transform: translate(0, -22%) rotate(18deg) skew(-16deg);
+          }
+          .phone__item3 {
+            transform: translate(0, 0%) rotate(18deg) skew(-16deg);
+          }
+          @media(max-width: 600px){
+            .phone__item1 {
+              transform: translate(0, -44%) rotate(6deg) skew(-4deg);
+            }
+            .phone__item2 {
+              transform: translate(0, -22%) rotate(6deg) skew(-4deg);
+            }
+            .phone__item3 {
+              transform: translate(0, 0%) rotate(6deg) skew(-4deg);
+            }
+          }
+
+        }
       }
+
+
+
 
     }
   }
 }
+
 .opportunities{
   padding: 5% 0;
   width: 100%;
