ready long loading fix

--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -1,7 +1,7 @@
 main {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, transparent 70%, $black),  url(../img/main/math.png) no-repeat fixed;
+  background: linear-gradient(to bottom, transparent 70%, $black),  url(../img/main/math.jpg) no-repeat fixed;
   background-size: cover;
   position: relative;
   z-index: 1;
