--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -121,3 +121,12 @@ nav {
     color: $blue;
   }
 }
+//
+.source {
+  color: $grey;
+  transition: 0.5s;
+  @include adaptiv-font(13);
+  &:hover {
+    color: $blue;
+  }
+}
