--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -21,17 +21,12 @@
     h2 {
       text-align: center;
     }
-    small a{
+    .source{
       display: block;
       position: absolute;
       left: 10%;
       bottom: 0;
-      color: $grey;
-      @include adaptiv-font(13);
-      transition: 0.5s;
-      &:hover {
-        color: $blue
-      }
+
     }
     .task__animation {
       position: absolute;
