--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap");
 
 /*!
@@ -7285,6 +7287,45 @@ nav .nav__item__hover {
   color: #4276d7;
 }
 
+.source {
+  color: #737B7D;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  font-size: calc(10.4px + 2.6 * ((100vw - 320px) / 1030));
+}
+
+.source:hover {
+  color: #4276d7;
+}
+
+::-webkit-scrollbar {
+  width: 35px;
+  /* ширина нового скроллбара */
+}
+
+::-webkit-scrollbar-track {
+  background: #f5cdcd;
+  /* цвет фона у дорожки */
+  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.2) inset;
+          box-shadow: 0 0 2px rgba(0, 0, 0, 0.2) inset;
+  /* тень у дорожки */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e47e7e;
+  /* цвет фона у дорожки */
+  border-radius: 8px;
+  /* скругление углов */
+  border: 3px solid #f5cdcd;
+  /* толщина, стиль и цвет рамки */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #b91414;
+  /* ползунок меняет цвет при наведении */
+}
+
 main {
   width: 100%;
   height: 100vh;
@@ -7642,20 +7683,11 @@ footer .footer__item a:hover {
   text-align: center;
 }
 
-.content .task__container small a {
+.content .task__container .source {
   display: block;
   position: absolute;
   left: 10%;
   bottom: 0;
-  color: #737B7D;
-  font-size: calc(10.4px + 2.6 * ((100vw - 320px) / 1030));
-  -webkit-transition: 0.5s;
-  -o-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.content .task__container small a:hover {
-  color: #4276d7;
 }
 
 .content .task__container .task__animation {
@@ -7854,15 +7886,6 @@ footer .footer__item a:hover {
   display: block;
   margin: 0 auto;
   max-width: 100%;
-}
-
-.theoretical__item a {
-  color: #737B7D;
-  font-size: calc(12.8px + 3.2 * ((100vw - 320px) / 1030));
-}
-
-.theoretical__item a:hover {
-  color: #4276d7;
 }
 
 @media (max-width: 1400px) {
