--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -4,9 +4,12 @@
 }
 
 .content {
+  height:100%;
+  width: 100%;
+  margin: 0 0 5% 0;
+  min-height: 250px;
   background: $backround;
 
-  min-height: 250px;
   .checkbox__line {
     position: absolute;
     display: block;
@@ -46,7 +49,6 @@
            cursor: pointer;
            transition: 0.3s;
          }
-
         ////top-left
         .checkbox__line--top-left {
           top: 0;
@@ -67,7 +69,6 @@
           height: 2px;
           transform-origin: left center;
           transform:  rotate(180deg);
-
         }
         .checkbox__input:checked + .checkbox__label ~ .checkbox__line--top-right {
           width: 50%;
