--- a/#src/scss/null.scss
+++ b/#src/scss/null.scss
@@ -9,11 +9,14 @@ div {
   padding: 0;
 }
 html, body {
-  // height: 100vh;
-  max-width: 100%;
+  height: 100%;
+  // max-width: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
   // overflow-x: hidden;
 }
+
 a {
   text-decoration: none;
   display: inline-block;
