--- a/#src/scss/difficulties.scss
+++ b/#src/scss/difficulties.scss
@@ -2,11 +2,10 @@
   max-width: 100vw;
 
 }
-
 .content {
   height:100%;
   width: 100%;
-  margin: 0 0 5% 0;
+  // margin: 0 0 5% 0;
   min-height: 250px;
   background: $backround;
 
@@ -153,5 +152,24 @@
       transition: 0.4s;
       transition-delay: 1.15s;
     }
+  }
+}
+.test {
+  display: flex;
+  justify-content: center;
+  // align-items: center;
+  text-align: center;
+  background: $backround;
+  height: 10vh;
+  h3 {
+    // display: block;
+    color: $black;
+  }
+  a {
+    // display: block;
+
+    color: $black;
+    font-family: Mulish;
+    @include adaptiv-font(19);
   }
 }
