--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -133,10 +133,11 @@ nav {
 }
 //
 footer {
-  margin-top: 7%;
+  // margin-top: 7%;
   display: table-row;
   //
   margin-bottom: -4%;
+  padding: 2% 0;
   min-height: 10%;
   width: 100%;
   display: flex;
