--- a/#src/scss/general.scss
+++ b/#src/scss/general.scss
@@ -49,7 +49,7 @@ p {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  animation: spin 0.9s cubic-bezier(0,.67,.88,.33) infinite ;
+  animation: spin 0.3s linear infinite ;
 }
 @keyframes spin {
     0% {
